Fix cropping circle effect in offer.

--- a/src/pages/offer/offer.scss
+++ b/src/pages/offer/offer.scss
@@ -36,6 +36,7 @@ page-offer{
     margin: auto auto 0 auto;
     border-radius: 100vw;
     animation: pulse 2s infinite;
+    overflow: visible;
   }
 
    .circles:hover{
